# robocoin-Viewer

./: .repomixignore  README.md  main.py  pyproject.toml
configs/: adapter_rules.json  vocabulary.json
src/adapters/: __init__.py  dasmcap_adapter.py  ego_adapter.py  folder_adapter.py  hdf5_adapter.py  lerobot_adapter.py  ros_adapter.py  unitree_adapter.py
src/core/: ai_screener.py  config_generator.py  factory.py  image_utils.py  inspector.py  interface.py  kinematics.py  llm_service.py  organizer.py  pipeline.py  registry.py  reviewer.py  types.py  vlm_caller.py
src/ui/: annotation_app.py  app.py  rerun_visualizer.py  streamlit_app.py
tests/: debug_mcap.py  demo_ai_screener.py  export_grid_image.py  test_ai_screener.py  test_align.py  test_hdf5.py  test_lerobot.py  test_organizer.py  test_pipeline.py  test_ros.py  test_unitree.py
tools/: extract_scenes.py
